--- a/scss/index.scss
+++ b/scss/index.scss
@@ -137,3 +137,81 @@ img {
 .grid {
   display: grid;
 }
+
+// ===== HEADER SECTION =====
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  transition: $transition-400;
+  z-index: $z-fixed;
+
+  &__container {
+    height: $header-height;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__logo {
+    font-size: 20px;
+    font-weight: $font-bold;
+    color: $darkblue-color;
+  }
+
+  @media screen and (max-width: 767px) {
+    &__menu {
+      position: fixed;
+      width: 80%;
+      top: 7rem;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      text-align: center;
+      padding: 2rem;
+      background-color: $white-color;
+      box-shadow: 0 0 12px rgba($color: #000000, $alpha: 0.1);
+      border-radius: 2rem;
+      transition: $transition-400;
+      opacity: 0;
+      transform: scaleY(0);
+      transform-origin: 0% 0%;
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  &__link {
+    font-size: 15px;
+    color: $grey-color;
+
+    &.active-link {
+      font-weight: $font-semibold;
+      color: $darkblue-color;
+    }
+  }
+
+  &__button {
+    display: flex;
+    margin-top: 1.5rem;
+  }
+
+  &__toggle {
+    display: inline-flex;
+    font-size: 1.5rem;
+    color: $darkblue-color;
+    cursor: pointer;
+  }
+
+  // show menu
+  .show-menu {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+}
