--- a/scss/index.scss
+++ b/scss/index.scss
@@ -223,6 +223,12 @@ img {
     opacity: 1;
     transform: scaleY(1);
   }
+
+  // sticky header
+  &.sticky-action {
+    background-color: $white-color;
+    box-shadow: 0 2px 12px rgba($color: #000000, $alpha: 0.1);
+  }
 }
 
 // ===== HOME SECTION =====
