--- a/scss/index.scss
+++ b/scss/index.scss
@@ -381,3 +381,11 @@ img {
     justify-self: center;
   }
 }
+
+// ===== ABOUT SECTION =====
+.about {
+  &__data,
+  &__img {
+    justify-self: center;
+  }
+}
