--- a/scss/index.scss
+++ b/scss/index.scss
@@ -430,3 +430,90 @@ img {
     justify-self: center;
   }
 }
+
+// ===== FOOTER SECTION =====
+.footer {
+  &__container {
+    display: grid;
+    gap: 6rem;
+  }
+
+  &__group {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 2.5rem;
+  }
+
+  &__content {
+    &-title {
+      font-size: 18px;
+      font-weight: $font-bold;
+      margin-bottom: $margin-1;
+    }
+
+    &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    &-link {
+      font-size: 15px;
+      color: $grey-color;
+
+      &:hover {
+        text-decoration: underline;
+        color: $blue-color;
+      }
+    }
+
+    &-text {
+      font-size: 15px;
+      color: $grey-color;
+      line-height: $leading-text;
+      margin-bottom: $margin-1-5;
+    }
+
+    &-socials {
+      display: inline-flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    &-icon {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.3rem;
+      color: $grey-color;
+      padding: 0.3rem;
+      background-color: rgba($color: #000000, $alpha: 0.05);
+      border-radius: 0.5rem;
+      transition: $transition-400;
+
+      &:hover {
+        background-color: $blue-color;
+        color: $white-color;
+      }
+    }
+  }
+
+  &__copy {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+
+    &-logo {
+      font-size: 20px;
+      font-weight: $font-black;
+      color: $darkblue-color;
+    }
+
+    &-rights {
+      font-size: 15px;
+      color: $grey-color;
+    }
+  }
+}
