--- a/scss/index.scss
+++ b/scss/index.scss
@@ -517,3 +517,32 @@ img {
     }
   }
 }
+
+// ===== SCROLLUP SECTION =====
+.scrollup {
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  right: 1.5rem;
+  bottom: -100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  background-color: rgba($color: #0f1b4c, $alpha: 0.5);
+  border-radius: 0.7rem;
+  color: $white-color;
+  font-size: 1.5rem;
+  transition: $transition-400;
+  opacity: 0;
+
+  &:hover {
+    background-color: rgba($color: #0f1b4c, $alpha: 1);
+  }
+
+  // scroll action
+  &.scroll-action {
+    opacity: 1;
+    bottom: 3rem;
+  }
+}
